libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__set_map.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
Init == {x[banana]: banana \in Box}
================================================================================
