libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__spec_always_true_ident.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
LEMMA TypeCorrect == Spec => [] TypeInv
THEOREM DeadlockFreedom == Spec => [] Invariant
================================================================================
