libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__string.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
X == "bananas"
================================================================================
